# sigma-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: examples.md
ref/: sigma-computing-public-rest-api.json
src/sigma_cli/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  openapi.py
src/sigma_cli/commands/: __init__.py  account_types.py  auth_cmd.py  connections.py  datasets.py  files.py  grants.py  members.py  tags.py  teams.py  user_attributes.py  whoami.py  workbooks.py  workspaces.py
src/sigma_cli/utils/: __init__.py  json_utils.py  output.py
